--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,28 +1,28 @@
 @font-face {
 	font-family: 'Inter';
-	src: url('./fonts/Inter-400.woff2') format('woff2'),
-		url('./fonts/Inter-400.woff'), format('woff');
+	src: url('./fonts/Inter-400.woff'), url('./fonts/Inter-400.woff2');
 	font-weight: 400;
+	font-display: swap;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Inter';
 	src: url('./fonts/Inter-500.woff2') format('woff2'),
-		url('./fonts/Inter-500.woff'), format('woff');
+		url('./fonts/Inter-500.woff');
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Inter';
 	src: url('./fonts/Inter-600.woff2') format('woff2'),
-		url('./fonts/Inter-600.woff'), format('woff');
+		url('./fonts/Inter-600.woff');
 	font-weight: 600;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Inter';
 	src: url('./fonts/Inter-700.woff2') format('woff2'),
-		url('./fonts/Inter-700.woff'), format('woff');
+		url('./fonts/Inter-700.woff');
 	font-weight: 700;
 	font-style: normal;
 }
