--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,7 @@
 	--title: #1e2224;
 	--white: #ffff;
 	--grey: #8291a3;
-	// --: #ffd54f;
+	--line-yellow: #ffd54f;
 	--text-grey: #686868;
 	// --: #f4f5fa;
 	--dark-yellow: #ff8a00;
@@ -17,5 +17,5 @@
 	// --: #664ef9;
 	// --: #f8f8f8;
 	// --: #bdbdbd;
-	--bg-blue: '#94AFFF';
+	// --bg-blue: #94AFFF;
 }
