--- a/src/components/Lists/Lists.module.scss
+++ b/src/components/Lists/Lists.module.scss
@@ -1,86 +1,3 @@
-.button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 10px 18px;
-
-	transition: all 0.2s;
-	text-align: center;
-	cursor: pointer;
-
-	border: none;
-	background: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
-	border-radius: 19px;
-	font-weight: 700;
-	font-size: 14px;
-
-	span {
-		color: var(--white);
-		padding-right: 10px;
-	}
-
-	svg {
-		margin-right: 10px;
-	}
-}
-
-.return {
-	font-size: 16px;
-	font-weight: 700;
-	padding: 12px 24px;
-	background: var(--light-yellow);
-	border-radius: 33px;
-	transition: 0.2s ease-in-out;
-
-	&:hover {
-		background: var(--btn-yellow);
-	}
-}
-
-.addAdvert {
-	background: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
-	color: var(--white);
-}
-
-.openMap {
-	background: var(--white);
-	font-weight: 600;
-
-	svg {
-		fill: var(--light-yellow);
-		transition: 0.2s ease-in-out;
-	}
-
-	&:hover {
-		svg {
-			fill: var(--btn-yellow);
-		}
-		color: var(--btn-yellow);
-	}
-}
-
-.buttonDef {
-	width: 306px;
-	padding: 12px 0;
-	text-align: center;
-	background: var(--light-yellow);
-	border-radius: 33px;
-	font-size: 16px;
-	font-weight: 700;
-}
-
-.error {
-	width: 306px;
-	padding: 12px 0;
-	text-align: center;
-	background: #eb5757;
-	border-radius: 33px;
-	font-size: 16px;
-	font-weight: 700;
-
-	svg {
-		order: 1;
-    margin: 0;
-    margin-left: 10px;
-	}
+.list {
+  
 }
