--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -15,3 +15,25 @@
 // 	opacity: 0.1;
 // 	border-radius: 40px;
 // }
+
+.filterBlock {
+	position: relative;
+	padding: 82px 0 118px;
+	display: flex;
+	justify-content: center;
+	background: linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
+}
+
+.bg {
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-image: url('headerBg.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+}
