--- a/src/components/Tabs/TabFilter/SelectFilterItem/SelectFilterItem.module.scss
+++ b/src/components/Tabs/TabFilter/SelectFilterItem/SelectFilterItem.module.scss
@@ -44,14 +44,14 @@
 .buttonActive {
 	box-shadow: (0px 5px 15px rgba(135, 124, 202, 0.25));
 
-	svg {
+	svg:last-child {
 		transform: translate(-50%, -50%) rotate(180deg);
 	}
 }
 
 .dropdown {
 	min-width: 150px;
-  margin-top: 10px;
+	margin-top: 10px;
 	position: absolute;
 	left: 20px;
 	display: none;
@@ -83,4 +83,29 @@
 
 .listActive {
 	background: #f7f5f5;
+}
+
+// =========== Фильтр для ветро и районов ===========
+.filterMetro,
+.filterDistricts {
+	max-width: 185px;
+	border-right: none;
+	padding: 0;
+
+	.button {
+		position: relative;
+		width: 100%;
+		padding: 9px 10px 9px 42px;
+	}
+
+	.dropdown {
+		width: 100%;
+		left: 0;
+	}
+}
+
+.filterDistricts {
+	.button {
+		padding: 11px 10px 9px 14px;
+	}
 }
