--- a/src/pages/Home/gallery-section/PromoMenu/PromoMenu.module.scss
+++ b/src/pages/Home/gallery-section/PromoMenu/PromoMenu.module.scss
@@ -1,64 +1,27 @@
-
-
-.galleryAds {
-	display: flex;
-	align-items: flex-end;
-}
-
-.cards {
-	max-width: 953px;
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	flex-shrink: 0;
-	gap: 30px;
-}
-
-.item {
-	border-radius: 10px;
-	height: 270px;
-	overflow: hidden;
-}
-
+// список популярных ссылок
 .link {
 	display: flex;
-	height: 100%;
-	position: relative;
-
-	&::after {
-		position: absolute;
-		content: '';
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: var(--title);
-		opacity: 0.4;
-	}
-}
-
-
-
-
-
-
-
-//  ========= promoMenu =======
-.promoMenu {
-	margin-left: 30px;
+	justify-content: space-between;
+	font-weight: 400;
 	font-size: 14px;
+	line-height: 17px;
+	margin-bottom: 10px;
 }
 
-.popularLinks {
-	& > * + * {
-		margin-top: 40px;
-	}
+.name {
+	color: #feb700;
+}
+
+.count {
+	color: #bdbdbd;
 }
 
 .list {
 	max-height: 133px;
 	overflow: hidden;
 }
+
+// кнопка еще
 
 .showMoreLinks {
 	max-height: unset;
@@ -77,6 +40,7 @@
 	display: inline-block;
 	margin-top: 15px;
 	font-weight: 500;
+	font-size: 14px;
 	line-height: 17px;
 	color: #feb700;
 	cursor: pointer;
