added slider and edits

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -19,8 +19,17 @@
 		padding-right: 10px;
 	}
 
+	// svg {
+	// 	margin-right: 10px;
+	// }
+}
+
+.show {
+	line-height: 17px;
+	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 	svg {
-		margin-right: 10px;
+		transform: rotate(270deg);
+    vertical-align: middle;
 	}
 }
 
@@ -80,7 +89,7 @@
 
 	svg {
 		order: 1;
-    margin: 0;
-    margin-left: 10px;
+		margin: 0;
+		margin-left: 10px;
 	}
 }
