--- a/src/components/Tabs/TabFilter/SelectFilterItem/SelectFilterItem.module.scss
+++ b/src/components/Tabs/TabFilter/SelectFilterItem/SelectFilterItem.module.scss
@@ -50,6 +50,7 @@
 }
 
 .dropdown {
+  position: relative;
 	min-width: 150px;
 	margin-top: 10px;
 	position: absolute;
@@ -58,6 +59,7 @@
 	background: #ffffff;
 	box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
 	border-radius: 10px;
+  z-index: 99;
 }
 
 .dropdown.toggleActive {
@@ -95,7 +97,14 @@
 	.button {
 		position: relative;
 		width: 100%;
-		padding: 9px 10px 9px 42px;
+		padding: 10px 10px 10px 42px;
+		border: none;
+		box-shadow: 0px 10px 20px rgba(0, 96, 206, 0.1);
+		line-height: 20px;
+
+		&:hover {
+			background:white;
+		}
 	}
 
 	.dropdown {
