--- a/src/Layout/Header/NavLink/NavLink.module.scss
+++ b/src/Layout/Header/NavLink/NavLink.module.scss
@@ -7,22 +7,24 @@
 		height: 100%;
 		position: relative;
 		font-size: 14px;
-    cursor: pointer;
-
-		// &::after {
-		// 	content: '';
-		// 	position: absolute;
-		// 	bottom: 0;
-		// 	left: 0;
-		// 	width: 100%;
-		// 	height: 2px;
-		// 	background: var(--light-yellow);
-		// }
+		cursor: pointer;
 	}
 }
 
+.active::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background: var(--light-yellow);
+}
+
 .headerTopLink {
-	color: var(--grey);
+	a {
+		color: var(--grey);
+	}
 	line-height: 40px;
 	font-weight: 400;
 	margin-right: 57px;
