--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -16,12 +16,7 @@
 
 	span {
 		color: var(--white);
-		padding-right: 10px;
 	}
-
-	// svg {
-	// 	margin-right: 10px;
-	// }
 }
 
 .show {
@@ -29,7 +24,14 @@
 	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 	svg {
 		transform: rotate(270deg);
-    vertical-align: middle;
+		vertical-align: middle;
+	}
+}
+
+.yellow {
+	background: linear-gradient(106.06deg, #ffd54f 1.12%, #fec100 97.96%);
+	span {
+		color: var(--title);
 	}
 }
 
@@ -54,12 +56,15 @@
 .openMap {
 	background: var(--white);
 	font-weight: 600;
-
+  
+	span {
+		color: var(--title);
+		padding-left: 10px;
+	}
 	svg {
 		fill: var(--light-yellow);
 		transition: 0.2s ease-in-out;
 	}
-
 	&:hover {
 		svg {
 			fill: var(--btn-yellow);
