--- a/src/pages/Home/rent-section/RentSection.module.scss
+++ b/src/pages/Home/rent-section/RentSection.module.scss
@@ -70,14 +70,14 @@
 	display: flex;
 	align-items: center;
 
-  .left {
-    padding-right: 30px;
-    border-right: 1px solid rgba(108, 80, 233, 0.1);
-  }
+	.left {
+		padding-right: 30px;
+		border-right: 1px solid rgba(108, 80, 233, 0.1);
+	}
 
-  button {
-    margin-left: 24px;
-  }
+	a {
+		margin-left: 24px;
+	}
 
 	.number {
 		font-weight: 700;
