--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@
 	--dark-yellow: #ff8a00;
 	// --: #efb600;
 	--primary: #664ef9;
+	--light-primary: #4e64f9;
 	--btn-yellow: #fec100;
 	// --: #7a7f86;
 	// --: #664ef9;
