--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,12 +10,31 @@
 
 	border: none;
 	background: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
-	border-radius: 19px;
+	border-radius: 20px;
 	font-weight: 700;
 	font-size: 14px;
 
+	// span {
+	// 	color: var(--white);
+	// }
+}
+
+.lightPrimary {
+	max-width: 140px;
+	font-weight: 700;
+	background: rgba(102, 78, 249, 0.1);
+
 	span {
-		color: var(--white);
+		color: var(--primary);
+	}
+}
+
+.yellow {
+	background: rgba(255, 213, 79, 0.1);
+	cursor: pointer;
+
+	span {
+		color: var(--btn-yellow);
 	}
 }
 
@@ -28,20 +47,25 @@
 	}
 }
 
-.yellow {
+.yellowGradient {
 	background: linear-gradient(106.06deg, #ffd54f 1.12%, #fec100 97.96%);
 	span {
 		color: var(--title);
 	}
 }
-
-.return {
-	font-size: 16px;
+.lightYellow {
 	font-weight: 700;
-	padding: 12px 24px;
 	background: var(--light-yellow);
-	border-radius: 33px;
 	transition: 0.2s ease-in-out;
+
+	span {
+		color: var(--title);
+		padding-right: 10px;
+	}
+
+	svg {
+		transform: rotate(270deg);
+	}
 
 	&:hover {
 		background: var(--btn-yellow);
@@ -51,12 +75,16 @@
 .addAdvert {
 	background: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
 	color: var(--white);
+	span {
+		padding-right: 10px;
+	}
 }
 
 .openMap {
 	background: var(--white);
 	font-weight: 600;
-  
+	box-shadow: 0px 10px 20px rgba(0, 96, 206, 0.1);
+
 	span {
 		color: var(--title);
 		padding-left: 10px;
