--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -3,42 +3,42 @@
 	padding-top: 35px;
 	padding-bottom: 105px;
 	filter: drop-shadow(0px 20px 40px rgba(135, 124, 202, 0.15));
+  text-align: center;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	width: 40px;
+	height: 40px;
+	border: 1px solid var(--primary);
+	border-radius: 50%;
+	color: var(--primary);
+	&:hover {
+		background: rgba(102, 78, 249, 0.1);
+	}
 }
 
 .swiper-button-prev {
-	padding: 19px;
-	border: 1px solid var(--primary);
-	border-radius: 50%;
-	color: var(--primary);
 	margin-right: 50px;
-	&:hover {
-		background: rgba(102, 78, 249, 0.1);
-	}
+  transform: translateX(-41%);
 }
 .swiper-button-next {
-	padding: 19px;
-	border: 1px solid var(--primary);
-	border-radius: 50%;
-	color: var(--primary);
-	margin-left: 50px;
-	&:hover {
-		background: rgba(102, 78, 249, 0.1);
-	}
+  transform: translateX(93%)
 }
 
-.swiper-button-prev:after {
-	font-size: 15px !important;
+.swiper .swiper-button-prev:after {
+	font-size: 15px;
 }
 
-.swiper-button-next:after {
-	font-size: 15px !important;
+.swiper .swiper-button-next:after {
+	font-size: 15px;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
 	position: absolute;
-	top: 90.9%;
-	left: 46.6%;
+	top: 92%;
+	left: 47%;
 }
 
 // .swiper .swiper-button-prev,
