--- a/src/components/Tabs/TabFilter/TabFilter.module.scss
+++ b/src/components/Tabs/TabFilter/TabFilter.module.scss
@@ -11,6 +11,7 @@
 
 .wrapper {
 	display: flex;
+  align-items: center;
 }
 
 .buttonFilter {
@@ -18,44 +19,8 @@
 	align-items: center;
 	justify-content: space-between;
 	padding-left: 17px;
-}
 
-.button {
-	display: flex;
-	align-items: center;
-	width: 123px;
-	padding: 9px 16px 9px;
-	text-align: center;
-	border-radius: 22px;
-	font-size: 14px;
-	font-weight: 700;
-  margin-right: 20px;
-  cursor: pointer;
-
-	svg {
-		margin-left: 7px;
-	}
-}
-
-.showMapBtn {
-	max-width: 111px;
-	background: #f8f8f8;
-	font-size: 14px;
-	font-weight: 500;
-
-	svg {
-		fill: var(--primary);
-		transition: 0.2s ease-in-out;
-    transform: rotate(0deg);
-	}
-
-	// &:hover {
-	// 	svg {
-	// 		fill: var(--btn-yellow);
-	// 	}
-	// 	color: var(--btn-yellow);
-	// }
-}
-.showBtn {
-	background: var(--light-yellow);
+  a {
+    margin-right: 20px;
+  }
 }
