--- a/src/pages/Home/news-section/NewsSection.module.scss
+++ b/src/pages/Home/news-section/NewsSection.module.scss
@@ -1,7 +1,115 @@
-.startSection {
-	padding: 100px 0;
+.newsSection {
+	padding: 210px 0;
 }
 .wrapper {
-  display: flex;
-  justify-content: space-between;
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	gap: 30px;
+}
+
+.content {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 30px;
+	margin-bottom: 30px;
+}
+
+.apartmentForDay {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.5;
+	color: var(--title);
+
+	.sdaemText {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 17px;
+		background: linear-gradient(90deg, #9d94ff 0%, #6b50e9 94.5%);
+		-webkit-text-fill-color: transparent;
+		-webkit-background-clip: text;
+		background-clip: text;
+		transition: 0.3s;
+		margin-bottom: 15px;
+
+		&:hover {
+			a {
+				border-bottom: 1px solid #9d94ff;
+			}
+		}
+	}
+
+	.title {
+		font-weight: 700;
+		font-size: 25px;
+		line-height: 30px;
+		margin-bottom: 32px;
+	}
+}
+
+.textColumn {
+	.text {
+		&:first-child {
+			margin-bottom: 25px;
+		}
+	}
+}
+
+.newsBlock {
+	padding: 23px 33px;
+	background: var(--white);
+	box-shadow: 0px 20px 40px rgba(135, 124, 202, 0.15);
+	border-radius: 10px;
+
+	.item {
+		padding: 10px 0px;
+		border-bottom: 1px solid rgba(101, 78, 249, 0.1);
+		&:first-child {
+			padding-top: 0;
+		}
+		&:last-child {
+			border: none;
+      margin-bottom: 32px;
+		}
+	}
+
+	.titleNews {
+		font-weight: 700;
+		font-size: 25px;
+		line-height: 30px;
+		color: var(--title);
+		margin-bottom: 26px;
+	}
+
+	.conteiner {
+		a {
+			display: inline-block;
+			font-weight: 600;
+			font-size: 14px;
+			line-height: 17px;
+			color: var(--title);
+			margin-bottom: 6px;
+		}
+		.date {
+			font-weight: 400;
+			font-size: 12px;
+			line-height: 15px;
+			color: var(--grey);
+		}
+	}
+}
+
+.newsViewAll {
+	display: flex;
+	align-items: center;
+	.link {
+		margin-right: 5px;
+		font-weight: 700;
+		font-size: 14px;
+		line-height: 17px;
+		color: var(--primary);
+	}
+
+	svg {
+		transform: rotate(270deg);
+	}
 }
