--- a/src/pages/Home/rent-section/RentSection.module.scss
+++ b/src/pages/Home/rent-section/RentSection.module.scss
@@ -74,9 +74,10 @@
 		padding-right: 30px;
 		border-right: 1px solid rgba(108, 80, 233, 0.1);
 	}
-
+  
 	a {
-		margin-left: 24px;
+    margin-left: 24px;
+    color: var(--white);
 	}
 
 	.number {
