--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
 	font-family: 'Inter';
-	src: url('./fonts/Inter-400.woff'), url('./fonts/Inter-400.woff2');
+	src: url('./fonts/Inter-400.woff') format('woff'),
+		url('./fonts/Inter-400.woff2');
 	font-weight: 400;
 	font-display: swap;
 	font-style: normal;
