added Redux Toolkit

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,14 +2,15 @@
 	font-family: 'Inter';
 	src: url('./fonts/Inter-400.woff') format('woff'),
 		url('./fonts/Inter-400.woff2');
-	font-weight: 400;
 	font-display: swap;
+	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Inter';
 	src: url('./fonts/Inter-500.woff2') format('woff2'),
 		url('./fonts/Inter-500.woff');
+	font-display: swap;
 	font-weight: 500;
 	font-style: normal;
 }
@@ -17,6 +18,7 @@
 	font-family: 'Inter';
 	src: url('./fonts/Inter-600.woff2') format('woff2'),
 		url('./fonts/Inter-600.woff');
+	font-display: swap;
 	font-weight: 600;
 	font-style: normal;
 }
@@ -24,6 +26,7 @@
 	font-family: 'Inter';
 	src: url('./fonts/Inter-700.woff2') format('woff2'),
 		url('./fonts/Inter-700.woff');
+	font-display: swap;
 	font-weight: 700;
 	font-style: normal;
 }
