--- a/src/components/Tabs/TabFilter/TabFilter.module.scss
+++ b/src/components/Tabs/TabFilter/TabFilter.module.scss
@@ -9,18 +9,49 @@
 	border-radius: 0px 10px 10px;
 }
 
-.wrapper {
+.form {
 	display: flex;
-  align-items: center;
+	align-items: center;
 }
 
-.buttonFilter {
+.buttons {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding-left: 17px;
 
-  a {
-    margin-right: 20px;
-  }
+	a {
+		margin-right: 20px;
+	}
+}
+
+.lightYellow {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 18px;
+
+	transition: all 0.2s;
+	text-align: center;
+	cursor: pointer;
+
+	border-radius: 20px;
+	font-size: 14px;
+	border: none;
+	font-weight: 700;
+	background: var(--light-yellow);
+	transition: 0.2s ease-in-out;
+
+	span {
+		color: var(--title);
+		padding-right: 10px;
+	}
+
+	svg {
+		transform: rotate(270deg);
+	}
+
+	&:hover {
+		background: var(--btn-yellow);
+	}
 }
