--- a/src/pages/News/News.module.scss
+++ b/src/pages/News/News.module.scss
@@ -17,37 +17,8 @@
 	}
 }
 
-.link {
-	position: relative;
+.wrapperContainer > div {
 	margin-bottom: 25px;
-	display: flex;
-	align-items: center;
-
-	svg {
-		margin-right: 7px;
-	}
-
-	.point {
-		display: inline-block;
-		color: var(--light-primary);
-	}
-
-	.text {
-		font-weight: 400;
-		font-size: 14px;
-		line-height: 1;
-		color: var(--text-grey);
-		padding-left: 7px;
-	}
-
-	&::before {
-		content: '.';
-		position: absolute;
-		top: 20%;
-		left: 20px;
-		transform: translate(-50%, -50%);
-		color: var(--light-primary);
-	}
 }
 
 .headerRow {
