--- a/src/pages/NewsDetail/NewsDetail.module.scss
+++ b/src/pages/NewsDetail/NewsDetail.module.scss
@@ -66,7 +66,8 @@
 	}
 }
 
-.wrapper {
+.headerWrapper
+ {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -105,4 +106,68 @@
 
 .icon {
 	display: flex;
+}
+
+
+
+
+
+
+.mainBlock {
+	padding-bottom: 65px;
+	position: relative;
+	top: -44px;
+}
+
+.wrapper {
+	display: flex;
+	padding-bottom: 65px;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	max-width: 844px;
+	margin: 0 auto;
+}
+
+.imgBlock {
+	margin-bottom: 40px;
+}
+
+.textBlock {
+	p {
+		span {
+			display: inline-block;
+			font-size: 16px;
+			line-height: 1.5;
+			color: var(--title);
+		}
+
+		& > * + * {
+			padding-top: 30px;
+		}
+	}
+}
+
+.newsCards {
+	padding: 62px 0px 100px;
+	min-height: 280px;
+	background: linear-gradient(
+		90deg,
+		rgba(148, 175, 255, 0.1) 0%,
+		rgba(78, 100, 249, 0.1) 94.5%
+	);
+}
+
+.title {
+	font-weight: 700;
+	margin-bottom: 44px;
+	font-size: 25px;
+	line-height: 30px;
+	color: var(--title);
+}
+
+.cardsRow {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 30px;
 }
