--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -41,10 +41,18 @@
 .show {
 	line-height: 17px;
 	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+	background: var(--primary);
+	color: var(--white);
 	svg {
 		transform: rotate(270deg);
 		vertical-align: middle;
+		margin-left: 16px;
 	}
+}
+
+.beige {
+	background: #f8f8f8;
+	color: var(--title);
 }
 
 .yellowGradient {
@@ -90,7 +98,6 @@
 		padding-left: 10px;
 	}
 	svg {
-		fill: var(--light-yellow);
 		transition: 0.2s ease-in-out;
 	}
 	&:hover {
@@ -124,5 +131,24 @@
 		order: 1;
 		margin: 0;
 		margin-left: 10px;
+	}
+}
+
+.fav {
+	width: 33px;
+	height: 33px;
+	padding: 0;
+	border-radius: 50%;
+	line-height: 33px;
+	background: rgba(235, 87, 87, 0.1);
+
+	svg {
+		transition: 0.2s ease-in;
+	}
+
+	&:hover {
+		svg {
+			fill: #fc3333;
+		}
 	}
 }
