--- a/src/components/Tabs/TabFilter/OptionsFilter/OptionsFilter.module.scss
+++ b/src/components/Tabs/TabFilter/OptionsFilter/OptionsFilter.module.scss
@@ -1,8 +1,8 @@
 .optionsFilter {
 	flex: 0 0 160px;
 	padding: 0px 20px;
-	border-right: 1px solid rgba(101, 78, 249, 0.1);
 	display: flex;
+	min-height: 64px;
 }
 
 .button {
@@ -15,8 +15,6 @@
 	color: var(--title);
 	cursor: pointer;
 
-
-  
 	.content {
 		margin-right: 4px;
 	}
