--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -135,11 +135,8 @@
 }
 
 .fav {
-	width: 33px;
-	height: 33px;
-	padding: 0;
+	padding: 10px;
 	border-radius: 50%;
-	line-height: 33px;
 	background: rgba(235, 87, 87, 0.1);
 
 	svg {
