--- a/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
+++ b/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
@@ -14,12 +14,20 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 30px;
+  padding-bottom: 80px;
 }
 
-.list {
+.notFoundTitle{
+  text-align: center;
+  font-weight: 700;
+  font-size: 26px;
+}
+
+.cardslist {
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	gap: 30px;
+
 }
 
 .filteres {
@@ -60,31 +68,45 @@
 	justify-content: space-between;
 	align-items: center;
 }
-.checkboxGroupRoot {
+
+.layoutGroupRoot {
 	display: flex;
 	align-items: center;
 	margin-left: auto;
 	margin-right: 65px;
 	gap: 20px;
-}
-.item {
-	display: flex;
-	align-items: center;
-	padding: 10px 15px;
 
-	svg {
-		margin-right: 10px;
+	.itemBtn {
+		display: flex;
+		align-items: center;
+		padding: 10px 15px;
+		background: transparent;
+
+		svg {
+			margin-right: 10px;
+		}
+
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 17px;
+		color: var(--title);
+		cursor: pointer;
 	}
 
-	font-weight: 600;
-	font-size: 14px;
-	line-height: 17px;
-	color: var(--title);
-	cursor: pointer;
+	.itemBtn.active {
+		background: #ffffff;
+		box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
+		border-radius: 18px;
+	}
 }
 
-.item.active {
-	background: #ffffff;
-	box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
-	border-radius: 18px;
+.wrapperContent {
+  padding-bottom: 80px;
+	.title {
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 1;
+		color: var(--title);
+    margin-bottom: 40px;
+	}
 }
