--- a/src/Layout/Header/HeaderBottom/HeaderBottom.module.scss
+++ b/src/Layout/Header/HeaderBottom/HeaderBottom.module.scss
@@ -9,3 +9,25 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+.nav {
+	.headerBottomList {
+		display: flex;
+		align-items: center;
+
+		& > div {
+			height: 100%;
+			position: relative;
+			font-size: 14px;
+			cursor: pointer;
+			color: var(--title);
+			line-height: 60px;
+			font-weight: 600;
+			margin-right: 80px;
+			height: 100%;
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+	}
+}
