--- a/src/Layout/Header/NavLink/NavLink.module.scss
+++ b/src/Layout/Header/NavLink/NavLink.module.scss
@@ -10,6 +10,7 @@
 		cursor: pointer;
     
 		a {
+      display: flex;
 			height: 100%;
 		}
 	}
@@ -21,7 +22,7 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 2px;
+	height: 3px;
 	background: var(--light-yellow);
 }
 
@@ -48,14 +49,32 @@
 		margin-right: 0;
 	}
 }
-// .location {
-// position: relative;
-// margin-left: 5px;
 
-// &::before {
-// 	content: url('../../../public/img/location.svg');
-// 	position: absolute;
-// 	top: 0;
-// 	left: -12px;
-// }
-// }
+
+.selected {
+	position: absolute;
+	width: 245px;
+	background: #ffffff;
+	box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
+	border-radius: 10px;
+  left: 0;
+  top: 66px;
+  z-index: 12;
+
+	a {
+		display: flex;
+		align-items: center;
+		padding: 10px 15px;
+		width: 100%;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 17px;
+		color: var(--title);
+		border-radius: 10px;
+		transition: 0.3s ease-in;
+	}
+
+	a:hover {
+		background: #f8f8f8;
+	}
+}
