--- a/src/components/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterSelect/FilterSelect.module.scss
@@ -1,7 +1,7 @@
 .filterOfferType {
 	position: relative;
 	padding: 0 20px;
-  width: 100%;
+	width: 100%;
 }
 
 .title {
@@ -79,6 +79,7 @@
 
 		&:hover {
 			background: #f7f5f5;
+			border-radius: 10px;
 		}
 	}
 }
