--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -109,13 +109,16 @@
 }
 
 .buttonDef {
-	width: 306px;
-	padding: 12px 0;
+	padding: 12px 128px;
 	text-align: center;
 	background: var(--light-yellow);
 	border-radius: 33px;
 	font-size: 16px;
 	font-weight: 700;
+
+	svg {
+		margin-right: 10px;
+	}
 }
 
 .error {
