--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,8 +1,47 @@
 .wrapper {
+	padding: 180px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background: url('../../assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+.root {
+	display: flex;
+	max-width: 1030px;
+	width: 100%;
+	margin: 0 auto;
+
+	.left {
+		max-width: 475px;
+		h1 {
+			font-weight: 700;
+			font-size: 60px;
+			line-height: 73px;
+			color: var(--white);
+			text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+			margin-bottom: 10px;
+		}
+		p {
+			font-weight: 500;
+			font-size: 20px;
+			line-height: 24px;
+			color: var(--white);
+			margin-bottom: 50px;
+		}
+
+    a{
+      display: inline-block;
+      padding: 12px 24px;
+    }
+	}
+
+  .right {
+    
+  }
 }
