--- a/src/Layout/Header/NavLink/NavLink.module.scss
+++ b/src/Layout/Header/NavLink/NavLink.module.scss
@@ -8,11 +8,42 @@
 		position: relative;
 		font-size: 14px;
 		cursor: pointer;
-    
+
 		a {
-      display: flex;
+			position: relative;
+			display: flex;
 			height: 100%;
 		}
+	}
+}
+
+.headerTopLink {
+	a {
+		color: var(--grey);
+	}
+
+	a:after {
+		position: absolute;
+		left: 0;
+		width: 0;
+		bottom: 0;
+		height: 3px;
+		background-color: var(--light-yellow);
+		content: '';
+		transition: width 0.3s ease-out;
+	}
+
+	a:hover:after,
+	a:focus:after {
+		width: 100%;
+	}
+
+	line-height: 40px;
+	font-weight: 400;
+	margin-right: 57px;
+
+	.headerTopLink:last-child {
+		margin-right: 0;
 	}
 }
 
@@ -21,22 +52,9 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: 100%;
+	width: 100% !important;
 	height: 3px;
 	background: var(--light-yellow);
-}
-
-.headerTopLink {
-	a {
-		color: var(--grey);
-	}
-	line-height: 40px;
-	font-weight: 400;
-	margin-right: 57px;
-
-	.headerTopLink:last-child {
-		margin-right: 0;
-	}
 }
 
 .headerBottomLink {
@@ -48,8 +66,24 @@
 	.headerBottomLink:last-child {
 		margin-right: 0;
 	}
-}
 
+	.item:after {
+		display: block;
+		position: absolute;
+		left: 0;
+		width: 0;
+		bottom: 0;
+		height: 4px;
+		background-color: var(--light-yellow);
+		content: '';
+		transition: width 0.3s ease-out;
+	}
+
+	.item:hover:after,
+	.item:focus:after {
+		width: 100%;
+	}
+}
 
 .selected {
 	position: absolute;
@@ -57,9 +91,9 @@
 	background: #ffffff;
 	box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
 	border-radius: 10px;
-  left: 0;
-  top: 66px;
-  z-index: 12;
+	left: 0;
+	top: 66px;
+	z-index: 12;
 
 	a {
 		display: flex;
