--- a/src/Layout/Header/HeaderBottom/HeaderBottom.module.scss
+++ b/src/Layout/Header/HeaderBottom/HeaderBottom.module.scss
@@ -8,6 +8,15 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
+	.logo {
+		opacity: 0.9;
+		transition: opacity 0.2s ease-in;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
 
 .nav {
