--- a/src/components/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterSelect/FilterSelect.module.scss
@@ -5,6 +5,7 @@
 }
 
 .title {
+	display: inline-block;
 	font-size: 14px;
 	margin-bottom: 11px;
 	font-weight: 500;
@@ -138,6 +139,7 @@
 		padding: 11px 10px 9px 14px;
 	}
 }
+
 .rentalApartment {
 	display: flex;
 	align-items: center;
