--- a/src/components/Tabs/TabFilter/OptionsFilter/OptionsFilter.module.scss
+++ b/src/components/Tabs/TabFilter/OptionsFilter/OptionsFilter.module.scss
@@ -1,13 +1,16 @@
 .optionsFilter {
 	flex: 0 0 160px;
-	padding: 0px 20px;
 	display: flex;
 	min-height: 64px;
 }
 
 .button {
+	position: relative;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	width: 100%;
+
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 17px;
@@ -17,6 +20,22 @@
 
 	.content {
 		margin-right: 4px;
+	}
+	&:after {
+		display: block;
+		position: absolute;
+		left: 0;
+		width: 0;
+		bottom: 0;
+		height: 3px;
+		background-color: var(--primary);
+		content: '';
+		transition: width 0.3s ease-out;
+	}
+
+	&:hover:after,
+	&:focus:after {
+		width: 100%;
 	}
 }
 
