bugfix on the catalog page

--- a/src/components/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterSelect/FilterSelect.module.scss
@@ -149,7 +149,8 @@
 	.button {
 		border: 0;
 		background: #f8f8f8;
-		padding: 10px 11px 12px;
+		padding: 11px 10px 9px 14px;
+    color: var(--title);
 	}
 
 	.buttonActive {
@@ -166,6 +167,31 @@
 	.dropdown {
 		margin-top: 10px;
 		left: 86px;
+		box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.18);
+		z-index: 100;
+		top: 60px;
+	}
+}
+
+.moreOptionsFilter {
+	display: flex;
+	flex-direction: column;
+	flex: 0 0 200px;
+	padding-left: 0;
+	padding-right: 0;
+
+	.button {
+		border: none;
+		background: #f8f8f8;
+		padding: 11px 10px 9px 14px;
+		line-height: 17px;
+    color: var(--title);
+	}
+
+	.dropdown {
+		width: 100%;
+		margin-top: 15px;
+		left: 0;
 		box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.18);
 		z-index: 100;
 		top: 60px;
