--- a/src/pages/News/News.module.scss
+++ b/src/pages/News/News.module.scss
@@ -17,15 +17,11 @@
 	}
 }
 
-.wrapperContainer > div {
-	margin-bottom: 25px;
-}
-
 .headerRow {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
-	margin-bottom: 50px;
+  margin: 25px 0 50px;
 }
 
 .title {
