--- a/src/components/LocationCard/LocationCard.module.scss
+++ b/src/components/LocationCard/LocationCard.module.scss
@@ -1,4 +1,5 @@
 .card {
+	position: relative;
 	max-width: 406px;
 	width: 100%;
 	background: #fffefe;
@@ -6,17 +7,37 @@
 }
 
 .headerCard {
+	position: relative;
 	width: 100%;
-	max-width: 550px;
+	max-width: 540px;
+	max-height: 227px;
 	display: flex;
 	justify-content: center;
 	background: #e0e0e0;
 	border-radius: 10px;
 	flex-shrink: 0;
+	overflow: hidden;
 
 	img {
+		max-width: 100%;
 		height: 100%;
-		border-radius: 10px;
+	}
+
+	.label {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 66px;
+		padding: 7.5px 12px;
+		background: linear-gradient(106.06deg, #ffd54f 1.12%, #fec100 97.96%);
+		border-radius: 0px 10px 10px 10px;
+
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 22px;
+		color: var(--white);
+		text-shadow: 0px 1px 0px rgba(147, 79, 0, 0.3);
+		z-index: 3;
 	}
 }
 
@@ -38,6 +59,7 @@
 }
 
 .priceText {
+	text-align: left;
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 17px;
@@ -102,12 +124,14 @@
 }
 
 // стили применяются на странице каталог
+.imgList {
+  max-height: 100%;
+}
 .bodyList {
-  padding: 25px;
-
-  .row {
-    margin-bottom: 0;
-  }
+	padding: 25px;
+	.row {
+		margin-bottom: 0;
+	}
 	.title {
 		font-weight: 700;
 		font-size: 20px;
@@ -133,7 +157,7 @@
 	}
 	.locationBlock {
 		display: flex;
-    margin-bottom: 15px;
+		margin-bottom: 15px;
 	}
 	.desc {
 		font-size: 14px;
