--- a/src/components/PriceFilter/PriceFilter.module.scss
+++ b/src/components/PriceFilter/PriceFilter.module.scss
@@ -53,6 +53,10 @@ input::-webkit-inner-spin-button {
 	.input {
 		max-width: 100px;
 		padding-left: 9px;
+    color: var(--title);
+		&::placeholder {
+			color: var(--title);
+		}
 	}
 
 	.priceWrapper {
