--- a/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
+++ b/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
@@ -1,6 +1,3 @@
-.apartmentCatalog {
-}
-
 .header {
 	padding-top: 100px;
 	padding-bottom: 57px;
@@ -106,7 +103,7 @@
 }
 
 .wrapperContent {
-	padding-bottom: 80px;
+	padding-bottom: 50px;
 	.title {
 		font-weight: 700;
 		font-size: 20px;
@@ -118,16 +115,86 @@
 
 .moreOptions {
 	display: flex;
-	padding: 20px 0 30px;
+	flex-direction: column;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	transition: all 0.3s ease-in-out;
+}
 
-	& > * + * {
-		margin-left: 48px;
+.moreOptionsActive {
+	height: 313px;
+	padding: 20px 0 30px;
+	overflow: visible;
+}
+
+.filters {
+	display: grid;
+	grid-template-columns: repeat(3, 200px);
+	gap: 48px;
+
+	button {
+		background: #f8f8f8;
 	}
 
 	& > div {
 		span {
 			color: var(--primary) !important;
 			padding-bottom: 5px;
+		}
+	}
+}
+
+.maps {
+	padding: 75px 0 86px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	background: url('../../assets/headerBg.png'),
+		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	&::before {
+		content: '';
+		position: absolute;
+		right: 140px;
+		top: 46px;
+		width: 61px;
+		height: 61px;
+		background-image: url('../../assets/circles.png');
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+}
+
+.content {
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	.title {
+		font-weight: 700;
+		font-size: 25px;
+		line-height: 30px;
+		margin-bottom: 20px;
+		color: var(--white);
+	}
+	.text {
+		max-width: 320px;
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 19px;
+		margin-bottom: 23px;
+		color: var(--white);
+	}
+	button {
+		svg {
+			margin-right: 8px;
+		}
+		span {
+			color: var(--title);
 		}
 	}
 }
