--- a/src/pages/Home/gallery/GalleryAds/GalleryAds.module.scss
+++ b/src/pages/Home/gallery/GalleryAds/GalleryAds.module.scss
@@ -11,6 +11,32 @@
 	}
 }
 
+.arrow {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	right: 21px;
+	bottom: 23px;
+	z-index: 999;
+
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+	border: 1px solid #ffffff;
+	border-radius: 50%;
+	transition: 0.3s ease-in;
+
+	svg {
+		transform: rotate(270deg);
+	}
+
+	&:hover {
+    transform: scale(1.1);
+		background: rgba(241, 239, 255, 0.317);
+	}
+}
+
 .link {
 	display: flex;
 	height: 100%;
