--- a/src/pages/Home/gallery/PromoMenu/PromoMenu.module.scss
+++ b/src/pages/Home/gallery/PromoMenu/PromoMenu.module.scss
@@ -4,8 +4,8 @@
 	justify-content: space-between;
 	font-weight: 400;
 	font-size: 14px;
-	line-height: 17px;
-	margin-bottom: 10px;
+	line-height: 1;
+	font-size: 14px;
 }
 
 .name {
@@ -19,6 +19,10 @@
 .list {
 	max-height: 133px;
 	overflow: hidden;
+
+	& > a + a {
+		margin-top: 10px;
+	}
 }
 
 // кнопка еще
