--- a/src/pages/RegistrationForm/RegistrationForm.module.scss
+++ b/src/pages/RegistrationForm/RegistrationForm.module.scss
@@ -44,6 +44,13 @@
 		background: #f7f7f7;
 		border-radius: 30px;
 		margin-bottom: 20px;
+
+		&::placeholder {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 17px;
+			color: #686868;
+		}
 	}
 
 	button {
