--- a/src/components/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterSelect/FilterSelect.module.scss
@@ -125,7 +125,15 @@
 	padding: 0;
 
 	.button {
-		padding: 10px 10px 10px 42px;
+		border: none;
+		padding: 11px 10px 11px 42px;
+		box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
+	}
+
+	.buttonActive {
+		svg:first-child {
+			fill: var(--primary);
+		}
 	}
 
 	.dropdown {
@@ -150,7 +158,11 @@
 		border: 0;
 		background: #f8f8f8;
 		padding: 11px 10px 9px 14px;
-    color: var(--title);
+		color: var(--title);
+
+		&:hover {
+			background: rgba(102, 78, 249, 0.1);
+		}
 	}
 
 	.buttonActive {
@@ -182,10 +194,14 @@
 
 	.button {
 		border: none;
-		background: #f8f8f8;
+		background: var(--dark-grey);
 		padding: 11px 10px 9px 14px;
 		line-height: 17px;
-    color: var(--title);
+		color: var(--title);
+
+		&:hover {
+			background: rgba(102, 78, 249, 0.1);
+		}
 	}
 
 	.dropdown {
