--- a/src/components/PriceFilter/PriceFilter.module.scss
+++ b/src/components/PriceFilter/PriceFilter.module.scss
@@ -21,13 +21,18 @@
 	max-width: 80px;
 	padding: 10px 14px 9px;
 
-	background: #f8f8f8;
+	background: var(--dark-grey);
 	border-radius: 20px;
 
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 17px;
 	color: var(--text-grey);
+  transition: .2s ease-in;
+
+  &:hover {
+    background: rgba(102, 78, 249, 0.1);
+  }
 }
 
 input::-webkit-outer-spin-button,
@@ -54,9 +59,15 @@ input::-webkit-inner-spin-button {
 		max-width: 100px;
 		padding-left: 9px;
     color: var(--title);
+    transition: .2s ease-in;
+
 		&::placeholder {
 			color: var(--title);
 		}
+
+    &:hover {
+      background: rgba(102, 78, 249, 0.1);
+    }
 	}
 
 	.priceWrapper {
