--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,22 +1,22 @@
 :root {
 	--title: #1e2224;
 	--white: #ffff;
-	--grey: #8291a3;
 	--line-yellow: #ffd54f;
+	--grey: #8291a3;
 	--text-grey: #686868;
-	// --: #f4f5fa;
+	--dark-grey: #f8f8f8;
 	--dark-yellow: #ff8a00;
-	// --: #efb600;
 	--primary: #664ef9;
 	--light-primary: #4e64f9;
 	--btn-yellow: #fec100;
+	--light-yellow: #ffd54f;
+	// --: #f4f5fa;
+	// --: #efb600;
 	// --: #7a7f86;
 	// --: #664ef9;
-	--light-yellow: #ffd54f;
 	// --: #f6f6f6;
 	// --: #e4e2e2;
 	// --: #664ef9;
-	// --: #f8f8f8;
 	// --: #bdbdbd;
 	// --bg-blue: #94AFFF;
 }
