--- a/src/components/Label/Label.module.scss
+++ b/src/components/Label/Label.module.scss
@@ -7,9 +7,12 @@
 	line-height: 17px;
 	border-radius: 18px;
 	background: #f8f8f8;
-
 	font-weight: 500;
-	color: var(--text-grey);
+	transition: 0.2s ease-in;
+
+	p {
+		color: var(--text-grey);
+	}
 	svg {
 		margin-right: 5px;
 	}
@@ -43,6 +46,10 @@
 	background: var(--white);
 	box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
 	cursor: pointer;
+
+	&:hover {
+		background: #f5f3ff;
+	}
 }
 
 .labelPrimary {
