--- a/src/components/LocationCard/LocationCard.module.scss
+++ b/src/components/LocationCard/LocationCard.module.scss
@@ -68,10 +68,12 @@
 
 .labelRow {
 	display: flex;
-
 	& > * + * {
 		margin-left: 7px;
 	}
+  .primaryText {
+    color: var(--primary);
+  }
 }
 
 .locationBlock {
@@ -121,11 +123,14 @@
 			margin-right: 10px;
 		}
 	}
+	button {
+		padding: 10px;
+	}
 }
 
 // стили применяются на странице каталог
 .imgList {
-  max-height: 100%;
+	max-height: 100%;
 }
 .bodyList {
 	padding: 25px;
@@ -176,6 +181,7 @@
 			}
 		}
 		button {
+      padding: 9px 15px;
 			border-radius: 18px;
 			color: #eb5757;
 			svg {
