--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -131,7 +131,7 @@
 		width: 100%;
 		height: 200px;
 		padding: 15px 20px;
-		background: #f8f8f8;
+		background: var(--dark-grey);
 		border-radius: 30px;
 		border: none;
 		outline-color: #664ef9;
