--- a/src/pages/Home/start-section/StartSection.module.scss
+++ b/src/pages/Home/start-section/StartSection.module.scss
@@ -74,7 +74,7 @@
 		bottom: -104px;
 		width: 61px;
 		height: 61px;
-		background-image: url('./pointGallery.png');
+		background-image: url('../../../assets/circlesYellow.svg');
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
