--- a/src/pages/Home/gallery/GallerySections.module.scss
+++ b/src/pages/Home/gallery/GallerySections.module.scss
@@ -14,7 +14,7 @@
 		bottom: -110px;
 		width: 61px;
 		height: 61px;
-		background-image: url('./pointGallery.png');
+		background-image: url('../../../assets/circlesYellow.svg');
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
