--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,24 +1,47 @@
 .wrapper {
-	padding: 180px 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  position: relative;
+	padding: 175px 0 185px;
 	width: 100%;
 	height: 100%;
 	background: url('../../assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
+
+  
 }
 
 .root {
+  position: relative;
 	display: flex;
+  justify-content: space-between;
 	max-width: 1030px;
 	width: 100%;
 	margin: 0 auto;
 
+  &::before {
+		position: absolute;
+		content: '';
+		top: -96px;
+		left: -120px;
+		width: 67px;
+		height: 62px;
+		background-image: url('../../assets/circlesYellow.svg');
+		background-repeat: no-repeat;
+	}
+
+	&::after {
+		position: absolute;
+		content: '';
+    bottom: -80px;
+    right: -36px;
+		width: 67px;
+		height: 62px;
+		background-image: url('../../assets/circles.svg');
+		background-repeat: no-repeat;
+	}
 	.left {
-		max-width: 475px;
+		max-width: 460px;
 		h1 {
 			font-weight: 700;
 			font-size: 60px;
@@ -35,13 +58,19 @@
 			margin-bottom: 50px;
 		}
 
-    a{
-      display: inline-block;
-      padding: 12px 24px;
-    }
+		a {
+			display: inline-block;
+			padding: 12px 24px;
+		}
 	}
 
-  .right {
-    
-  }
+	.right {
+		img {
+			transform: scale(1.1);
+		}
+	}
+}
+
+.title404 {
+	font-size: 300px;
 }
