--- a/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
+++ b/src/pages/ApartamentCatalog/ApartamentCatalog.module.scss
@@ -175,7 +175,7 @@
 	display: flex;
 	justify-content: center;
 	text-align: center;
-	background: url('../../assets/headerBg.png'),
+	background: url('/assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
