--- a/src/pages/Home/filters-section/HomeFilters.module.scss
+++ b/src/pages/Home/filters-section/HomeFilters.module.scss
@@ -2,7 +2,7 @@
 	padding: 82px 15px 118px;
 	display: flex;
 	justify-content: center;
-	background: url('../../../assets/headerBg.png'),
+	background: url('/assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
