--- a/src/components/InputGroup/InputGroup.module.scss
+++ b/src/components/InputGroup/InputGroup.module.scss
@@ -1,4 +1,6 @@
 .inputGroup {
+	display: flex;
+	flex-direction: column;
 	position: relative;
 
 	svg:first-child {
@@ -12,12 +14,34 @@
 		left: 20px;
 	}
 
-  input {
-    &:focus {
+	.errorText {
+		position: absolute;
+		text-align: left;
+		font-size: 10px;
+		color: rgba(249, 78, 78, 0.8);
+		top: -15px;
+	}
+
+	.input {
+		padding: 0 15px 0 55px;
+		width: 100%;
+		height: 50px;
+		background: #f7f7f7;
+		border: 2px solid transparent;
+		border-radius: 30px;
+
+		&:focus {
 			border: 2px solid rgba(78, 100, 249, 0.8);
-      & + svg {
-        fill: #6540cd;
-      }
+			& + svg {
+				fill: #6540cd;
+			}
 		}
-  }
+	}
+
+	.errorInput {
+		border: 2px solid rgba(249, 78, 78, 0.8);
+		&:focus {
+			border: 2px solid rgba(249, 78, 78, 0.8);
+		}
+	}
 }
