--- a/src/pages/AuthForm/AuthForm.module.scss
+++ b/src/pages/AuthForm/AuthForm.module.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100vh;
-	background: url('../../assets/headerBg.png'),
+	background: url('/assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
