--- a/src/pages/RegistrationForm/RegistrationForm.module.scss
+++ b/src/pages/RegistrationForm/RegistrationForm.module.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100vh;
-	background: url('../../assets/headerBg.png'),
+	background: url('/assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -17,7 +17,7 @@
 .formBlock {
 	display: flex;
 	max-width: 844px;
-	gap: 50px;
+  gap: 50px;
 	width: 100%;
 	padding: 50px;
 	text-align: center;
@@ -27,8 +27,15 @@
 	border-radius: 10px;
 }
 
+
+.row {
+	display: flex;
+	gap: 50px;
+}
+
 .authForm {
 	max-width: 306px;
+
 	h1 {
 		font-weight: 700;
 		font-size: 25px;
@@ -38,11 +45,6 @@
 	}
 
 	input {
-		padding: 15px 55px;
-		width: 100%;
-		height: 50px;
-		background: #f7f7f7;
-		border-radius: 30px;
 		margin-bottom: 20px;
 
 		&::placeholder {
@@ -67,15 +69,25 @@
 }
 
 .description {
+	padding-top: 43px;
 	max-width: 388px;
 	text-align: left;
-	font-weight: 600;
 	font-size: 14px;
 	line-height: 1.5;
 
-	p {
+	.list {
+		margin-bottom: 70px;
+	}
+
+	.title {
+		font-weight: 600;
+		color: #686868;
+	}
+
+	.item {
 		color: var(--text-grey);
-		font-weight: 400;
+		list-style-type: disc;
+		list-style-position: inside;
 	}
 
 	.link {
@@ -85,7 +97,6 @@
 		color: var(--primary);
 	}
 	.rememberMe {
-		padding-top: 70px;
 		font-weight: 400;
 	}
 }
