--- a/src/pages/Сontacts/Сontacts.module.scss
+++ b/src/pages/Сontacts/Сontacts.module.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	background: url('../../assets/headerBg.png'),
+	background: url('/assets/headerBg.png'),
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -80,12 +80,10 @@
 .right {
 	max-width: 625px;
 	width: 100%;
-	display: flex;
-	flex-direction: column;
 	background: #fffefe;
 	box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
 	border-radius: 10px;
-	padding: 40px;
+	padding: 40px 38px;
 }
 
 .formBlock {
@@ -113,36 +111,48 @@
 .inputGroup {
 	display: flex;
 	flex-direction: column;
+  align-items: flex-start;
 
 	input {
-		padding: 15px 55px;
-		width: 100%;
-		height: 50px;
-		background: #f7f7f7;
-		border-radius: 30px;
 		margin-bottom: 20px;
-	}
-	input:focus {
-		border: 2px solid rgba(102, 78, 249, 0.8);
-		& + svg {
-			fill: #6540cd;
-		}
 	}
 }
 
 .message {
+  position: relative;
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 40px;
 
-	textarea {
+  .errorText {
+		position: absolute;
+		text-align: left;
+		font-size: 10px;
+		color: rgba(249, 78, 78, 0.8);
+		top: 16px;
+	}
+
+	.textarea {
 		width: 100%;
 		height: 200px;
 		padding: 15px 20px;
 		background: #f8f8f8;
+    
+    border: 2px solid transparent;
 		border-radius: 30px;
-		border: none;
-		outline-color: #664ef9;
 		resize: none;
+    transition: .2s ease-in;
+
+    &:focus {
+			border: 2px solid rgba(78, 100, 249, 0.8);
+		}
 	}
+
+  .errorTextarea {
+		border: 2px solid rgba(249, 78, 78, 0.8);
+
+    &:focus {
+		border: 2px solid rgba(249, 78, 78, 0.8);
+		}
+  }
 }
